# victus-backend

./: .dockerignore  .env.example  .gitignore  DOMAIN_DESCRIPTION.txt  Dockerfile  README.md  README_MACOS.md  REFACTORING_SUMMARY.md  alembic.ini  check_setup.py  docker-compose.yml  download_models.py  grant_admin_consent.sh  pyproject.toml  railway.json  render.yaml  verify_microsoft_auth.sh  victus.db
alembic/: env.py
alembic/versions/: 0b34eb58d39a_add_policy_tables.py  3c60e1187947_add_core_tables_pgvector.py  4f95b897a5b8_add_password_reset_tokens.py  4fe060369c47_a2_a3_init.py  6dd9452c10a1_add_safety_tables.py  993afe580406_refactor_models_to_package_with_new_.py  a2c3ba5a6b8f_add_user_settings_and_scopes.py  ec4f65823ae4_add_oauth_accounts.py
db/init/: 04_scopes.sql  06_files.sql
docs/: architecture.html  local_dev_db.md  pgvector_migration_notes.md  security_invariants.md
docs/guides/: ADMIN_CONSENT_GUIDE.md  ALLOW_PERSONAL_ACCOUNTS.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_SETUP.md  AUTHENTICATION_SUMMARY.md  BACKEND_API_SUMMARY.md  BACKEND_READINESS_ANALYSIS.md  CHANGELOG.md  CODE_REVIEW.md  COMPANY_TENANT_CONSENT.md  CONDA_POETRY_SETUP.md  CONFIGURATION_STATUS.md  DEPLOYMENT.md  DESIGN_REFERENCES.md  ENABLE_PERSONAL_ACCOUNTS_ALTERNATIVE.md  FIGMA_MAKE_PROMPT.md  FIXES_APPLIED.md  FIX_ACCESS_TOKEN_VERSION.md  FIX_PERSONAL_ACCOUNTS.md  FREE_DEPLOYMENT.md  GOOGLE_OAUTH_SETUP.md  GRANT_ADMIN_CONSENT.md  M365_AUTH_FIX.md  MICROSOFT_OAUTH_EXPLAINED.md  MICROSOFT_OAUTH_FIX.md  MICROSOFT_OAUTH_SETUP.md  MICROSOFT_OAUTH_VERIFICATION.md  MIGRATION.md  MOBILE_SUPPORT.md  MULTI_TENANT_FIX.md  PROJECT_STRUCTURE_ANALYSIS.md  PYPROJECT_VERIFICATION.md  QUICK_DEPLOY.md  (+3 more)
faiss_index/: index.faiss  index.pkl
scripts/: create_dev_user.py  create_superuser.py  migrate_session_schema.py  migrate_superuser.py
src/: __init__.py  config.py  database.py  m365_auth.py  main.py  middleware.py
static/: voice_test.html
tests/: __init__.py  conftest.py  test_a1_stability.py  test_a2_memory.py  test_agent.py  test_api.py  test_flow.py  test_memory_pgvector.py  test_memory_tools.py  test_metrics.py  test_oauth.py  test_policy_manual.py  test_sessions_create.py  test_sessions_message.py  test_sse.py  test_tools.py
(+117 files in other folders)
